# sauron

./: .gitignore  DOCKER_USAGE.md  Dockerfile  Dockerfile.uv  GPU_UTILIZATION_BOTTLENECKS_ANALYSIS.md  MANIFEST.in  README.md  create_dummy_features.py  docker-compose.yml  feature_extract.py  feature_extraction_plan  profile_data_loading.py  pyproject.toml  requirements.txt  run_docker.bat  run_docker.sh  run_mil_training.bat  run_mil_training.sh  run_profiling.sh  setup.py  train_mil.py  train_mil_run.py
.github/workflows/: ci.yml
Data/: config_tcga-ot.yaml
Scripts/: clam_worker.sbatch.sh  launch_coord_job.sh  launch_job.sh  launch_mil_train.sh  launch_mil_train_classification.sh  master_submit.sh  run_clam_patching_triaged.sh
aegis/: __init__.py  cli.py  requirements.txt
aegis/data/: classMILDataset.py  data_utils.py  dataset_factory.py  memmapMILDataset.py  survMILDataset.py
aegis/feature_extraction/: batch_processing.py  caching.py  cli_runner.py  processor.py
aegis/losses/: classification_loss.py  surv_loss.py
aegis/mil_models/: ABMIL.py  DiffABMIL.py  MaxMIL.py  MeanMIL.py  S4MIL.py  TransMIL.py  WIKGMIL.py  activations.py  base_mil.py  dsmil.py  hgachc.py  mambaMIL.py  models_factory.py  moemil.py  rrtmil.py  test_mamba_import.py
aegis/parse/: cli_parsers.py
aegis/training/: cli_runner.py  constants.py  fold_processor.py  lightning_module.py  param_builders.py  pipeline.py  split_manager.py  (+3 more)
docs/: api.rst  citation.rst  conf.py  faq.rst  index.rst  installation.rst  make.bat  metadata_fusion.md  quickstart.rst  requirements.txt  tutorials.rst
(+41 files in other folders)
